--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,13 +7,47 @@
 </head>
 <body>
     <script>
-        let a = [1, 2, 3];
-        let b = [1, 2, 3];
-        if ( a===b) {
-            alert('true');
-        } else {
-            alert('false');
-        }
+        // let a = [1, 2, 3];
+        // let b = [1, 2, 3];
+        // if ( a===b) {
+        //     alert('true');
+        // } else {
+        //     alert('false');
+        // }
+
+        let a1 = 0.777646646;
+        alert(a1.toPrecision(6)); // 0.777647
+
     </script>
 </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <span>Nhập từ: </span>
+    <input type="text" id="word" />
+    <input type="button" value="dịch" onclick="dich();" />
+    <br />
+    <p id="result"></p>
+    <script>
+      function dich() {
+        let tienganh = ["liam", "avocado", "pineapple", "pear"];
+        let tiengviet = ["chanh", "bơ", "dứa", "lê"];
+        let nhap = document.getElementById("word").value;
+        let index = tienganh.indexOf(nhap);
+        if (index == -1) {
+          alert("Không có từ này");
+        } else {
+          document.getElementById("result").innerHTML =
+            "Nghĩa của từ " + nhap + " là " + tiengviet[index];
+        }
+      }
+    </script>
+  </body>
 </html>
