--- a/BT3/Bai4.html
+++ b/BT3/Bai4.html
@@ -19,11 +19,17 @@
 
       let  a=2;
       function sum(a){
-        a++;
-        return a
+        return a;
       }
-      alert(a);
-      alert(sum(a));
+      alert(a); //2
+      alert(sum(a));//3
+
+      let  b=2;
+      function sum1(a){
+        return a*5;
+      }
+      alert(b); //2
+      alert(sum1(b));//10
     </script>
   </body>
 </html>
